--- a/WpfApp_FlexPanelT/MainWindow.xaml
+++ b/WpfApp_FlexPanelT/MainWindow.xaml
@@ -133,14 +133,14 @@
         </qpanel:FlexPanel>
         <GridSplitter Grid.Column="1" Width="2" HorizontalAlignment="Center" VerticalAlignment="Stretch" Background="Gray"/>
         <ScrollViewer Padding="6" x:Name="scollviwer_panel" Grid.Column="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-            <qpanel:FlexPanel FlexDirection="Row" x:Name="flexpanel" Grid.Column="2" Background="{DynamicResource br-gray-950}">
-            </qpanel:FlexPanel>
-
-            <!--<qpanel:FlexPanel FlexDirection="Row" Gap="8">
-                <Button qpanel:FlexPanel.Basis="200">Test1</Button>
-                <Button qpanel:FlexPanel.AlignSelf="End">Test2</Button>
-                <Button qpanel:FlexPanel.AlignSelf="Center">Test3</Button>
+            <!--<qpanel:FlexPanel FlexDirection="Row" x:Name="flexpanel" Grid.Column="2" Background="{DynamicResource br-gray-950}">
             </qpanel:FlexPanel>-->
+
+            <qpanel:FlexPanel FlexDirection="Row" Gap="8">
+                <Border Width="30" Padding="3" BorderBrush="Red" BorderThickness="1">
+                    <TextBlock Text="123456789"/>
+                </Border>
+            </qpanel:FlexPanel>
 
         </ScrollViewer>
         <!--<ItemsControl Grid.Column="2" x:Name="itemscontrol_flexpanel">
